--- a/packages/website/app/globals.css
+++ b/packages/website/app/globals.css
@@ -33,6 +33,9 @@
 		--ring: 222.2 84% 4.9%;
 
 		--radius: 0.5rem;
+
+		--sevingu-main: 39, 48, 106, 1;
+		--sevingu-sub: 197, 246, 250, 1;
 	}
 
 	.dark {
